# aisd-lab2

./: CMakeLists.txt  LinkedList.h  README.md  main.cpp
